# everythingWrongWithPinocchio

./: README.md
ai_labs/: game_life.py  genetics.py  graph.py  input.txt  logic_machine.py  taxi.py  temp.txt
ai_labs/expertsystem/: colors.csv  comprules.txt  expertize.py  generate_more_less_rules.py  keywords.txt  puzzles.csv  queries.txt  rules.txt
cpp_examples/: Makefile  shared_ptr_aliasing.cpp
gruzintsev/: main.cpp
gruzintsev/1/: local  main.cpp
gruzintsev/2/: Makefile  local  main.cpp
image_crippling/: crippling.py
image_processing/: tracking.py
interpolationRational/: input.txt  interpolationRational.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.h
interpolationRational/mathadditionals/: CMakeLists.txt  main.cpp  mathadditionals.cpp  mathadditionals.h
kurochkin_labs/: dataset_generator.py  ftp_server.py  genetic.py  perceptron.py
kurochkin_labs/cnn/: cnn.py  (+2 more)
math_methods_lab/: collocation.py  cowell.py  final_differences.py  fredholm_gauss_chebyshev.py  volterr.py
nadya_stats/: nadya_stats.py
opengl_lab/: CMakeLists.txt  curve.cpp
opengl_lab/3d_color/: 3d_color.cpp  CMakeLists.txt
opengl_lab/nurbs/: CMakeLists.txt  main.cpp  mathadditionals.cpp  mathadditionals.h
opengl_lab/nurbs_curve_formula/: CMakeLists.txt  nurbs_curve_formula.cpp
opengl_lab/nurbs_surface/: CMakeLists.txt  nurbs_surface.cpp
opengl_lab/teapot/: CMakeLists.txt  teapot.cpp
yandex_quest/: basic.txt  basic_columns.txt  basic_unformatted.txt  bishops.py  hash.txt  morse.py  morse_decoded.txt  morse_dots.txt  temp.py  turtle_way.txt  tut.py
(+4 files in other folders)
